cmake_minimum_required(VERSION 3.16.3)

set(CMAKE_CXX_STANDARD 17)

project(Player)

add_executable(Player main.cpp
Archer.cpp
Archer.h
Base.cpp
Base.h
Catapult.cpp
Catapult.h
Entity.cpp
Entity.h
Game.cpp
Game.h
Knight.cpp
Knight.h
pch.cpp
pch.h
Pikeman.cpp
Pikeman.h
Ram.cpp
Ram.h
Swordsman.cpp
Swordsman.h
Vector2f.h
Worker.cpp
Worker.h
)
